--- a/styles.css
+++ b/styles.css
@@ -62,14 +62,14 @@ html {
     
     .card .img {
 	height: 6.5rem;
-	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 1rem));
+/*	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 1rem)); */
     }
     
     .card .img img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	filter: grayscale(100%);
+/*	filter: grayscale(100%); */
     }
     
     .card a {
