--- a/styles.css
+++ b/styles.css
@@ -73,16 +73,34 @@ html {
     }
     
     .card a {
+/*	outline: none; */
+	text-decoration: none;
+    }
+
+    .card a:focus {
 	outline: none;
+	text-decoration: underline;
     }
     
-    .card h2 a {
+    .card:focus-within, .card:hover {
+	box-shadow: 0 0 0 0.25rem;
+    }
+    
+    .card:focus-within a:focus {
+	text-decoration: none;
+    }
+
+
+    
+/*    .card h2 a {
 	text-decoration: none;
     }
     
     .card h2 a:focus {
 	text-decoration: underline;
-    }
+    } */
+
+
     
     .card h2:focus-within ~ .cta {
 	box-shadow: 0 0 0 0.125rem;
